<resources>
    <string name="app_name">Kabod</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup">No account? Sign up here.</string>
    <string name="action_logout">Logout</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_signup">Signup</string>
    <string name="text_login">Already have an account? Login here</string>
    <string name="action_profile">Profile</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete Account</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>

    <string name="hello_status_update_fragment">Hello status update fragment</string>
    <string name="hello_chats_fragment">Hello chats fragment</string>
    <string name="hello_status_fragment">Hello status fragment</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Type message</string>
    <string name="test">Hi.\nHow are you? \nWhat are you up to today?</string>
    <string name="button_update_status">Update Status</string>
    <string name="hint_status">Status note</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="kabod">KABOD</string>
    <string name="user_profile_image">user profile image</string>
    <string name="status_image">status image</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_in_with_phone_number">Sign in with Phone Number</string>
    <string name="next_text">Next</string>
    <string name="continue_text">Continue</string>
    <string name="enter_otp_code">Enter the OTP code sent to your mobile</string>
    <string name="occupation">Occupation</string>
    <string name="city_state">City/State</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="smiley">smiley</string>
    <string name="send_chat">send chat</string>
    <string name="attach_file">attach file</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_note">Welcome to kabod App. Click button below to begin.</string>
    <string name="signin_create_account">Signin/Create Account</string>
    <string name="about">About</string>
    <string name="about_info">This is the official app of Charles Adebola Ministries.</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_phone">Phone: +234 905 927 0030, +234 806 331 9364</string>
    <string name="contact_email">Email: revadebola@gmail.com</string>
    <string name="web_blog">Web/Blog: blog.charlesadebolaministries.org</string>
    <string name="recent_updates">Recent Updates</string>
</resources>
