<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/kabod"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:scaleType="centerInside"
                android:src="@drawable/kabod1_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSignup"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:onClick="onSignup"
                android:text="@string/button_signup" />

            <TextView
                android:id="@+id/loginTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSignup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:clickable="true"
                android:onClick="onLogin"
                android:text="@string/text_login" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorLightGrey"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>